ci/deploy/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tech-radar
  name: tech-radar
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: tech-radar

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-radar
  namespace: tech-radar
spec:
  ingressClassName: nginx-public
  rules:
    - host: radar.imaginelearning.engineering
      http:
        paths:
          - backend:
              service:
                name: tech-radar
                port:
                  name: http
            pathType: ImplementationSpecific

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    strategy.spinnaker.io/max-version-history: '2'
  labels:
    app: tech-radar
  name: tech-radar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tech-radar
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: ops-Kubernetes-10QULTXLI13OQ-KubeWnaSystemPodRole-F2TTKNTLR275
      labels:
        app: tech-radar
    spec:
      containers:
        - name: tech-radar
          image: ops/tech-radar

          command:
            - /src/build-your-own-radar/entrypoint.sh

          args: ["nginx", "-g", "daemon off;"]

          ports:
            - containerPort: 80
              name: http

          volumeMounts:
            - mountPath: /wna/secrets
              name: wna-secrets
              readOnly: true

      restartPolicy: Always
      volumes:
        - name: tech-radar-env
          configMap:
            name: tech-radar-env
            defaultMode: 420
        - name: wna-secrets
          emptyDir:
            medium: Memory
